test/files/invalid/helpers/overlapping_namespace_inner2.fbs
namespace Foo.Bar;

table Y {}
